# phoenix_tf

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Jenkinsfile.aarch64  Makefile  README.md  TF_VERSION  VERSION  bitbucket-pipelines.yml  docker.sh  onednn_conv_test.py  onednn_convback_test.py  pytest.ini  setup.py  test.py
.devcontainer/: devcontainer.json
dockerfiles/: bash.bashrc  bench.dockerfile  dev-gpu-aarch64.dockerfile  dev-gpu-x86_64.dockerfile  dev-gpu.dockerfile  dev-x86_64.dockerfile  dev.dockerfile  dist_binary.dockerfile  dockerfile  nsight.dockerfile  prod-gpu-aarch64.dockerfile  prod-gpu-x86_64.dockerfile  prod-x86_64.dockerfile  production.dockerfile
modules/upstride_tf/type2/tf/keras/: convolutional.py  layers.py
scripts/: bench_visu.py  benchmarks.py  conv2d_bench.py  conv2d_bench_visu.py  conv2d_test.py  dense_bench.py  dense_bench_visu.py  onednn_conv_test.py  onednn_conv_test_visu.py  readme_to_pdf.sh
src/cc/: kernels.cc  ops.cc  tensorflow_includes.hpp  upstride.h  upstride.hpp  upstride_kernels.cc  upstride_ops.cc  upstride_tf.hpp  utils.cc  utils.hpp
src/cc/kernels/: upstride.h  upstride_kernels.cc  upstride_kernels.cu.cc  upstride_tf.hpp  utils.hpp
src/cc/onednn/: context.hpp  conv2d.cc
src/cc/ops/: upstride_ops.cc
src/python/: cythonizer.py  setup.py
src/python/upstride/: __init__.py  convolutional.py  generic_convolution.py  generic_dense.py  generic_layers.py  utils.py
src/python/upstride/internal/: clifford_product.py  convolution.py  custom_ops.py  dense.py  initializers.py  layers.py  test.py  test_exhaustive.py
src/python/upstride/scalar/tf/keras/: layers.py  test_layers.py  utils.py
src/python/upstride/type0/tf/keras/: layers.py  test_layers.py
src/python/upstride/type1/tf/keras/: initializers.py  layers.py  test_layers.py
src/python/upstride/type2/tf/keras/: convolutional.py  dense.py  initializers.py  layers.py  test_layers.py  utils.py
src/python/upstride/type3/tf/keras/: layers.py  test_layers.py
src/python/upstride/type_generic/: clifford_product.py  custom_op.py  test.py
src/python/upstride/type_generic/tf/keras/: layers.py
src/python/upstride_ops/: __init__.py  upstride_ops_test.py
tests/: script_print_kernel_size_conv2d.py  test.py  test_tf.py  test_type1.py  test_type2.py  test_type3.py
tests/cpp_tests/: CMakeLists.txt  tests.cpp
tests/python_high_level_tests/: model_conv.py  model_dense.py  model_separable_conv.py  train_model.py  train_simple_dense_network_scalars.py  train_simple_network.py  train_simple_network_quaternions.py  train_simple_network_scalars.py
tests/python_tests/: test.py  test_conv2d.py  test_depthwiseconv2d.py  test_onednn.py  test_onednn_dw.py  test_tf.py  test_type2.py
tests/python_unittests/: test_conv2d.py  test_depthwiseconv2d.py
toolchain/: gcc-8.4_8.4-1_amd64.deb
